Closed
Bug 1335250
Opened 9 years ago
Closed 9 years ago
nightly 20170130 compile fails with webrtc disabled MediaEngine.h:229:28: error: reference to ‘ipc’ is ambiguous
Categories
(Core :: WebRTC, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox51 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | + | fixed |
| backlog | webrtc/webaudio+ |
People
(Reporter: u532768, Assigned: baku)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
1.16 KB,
text/plain
|
Details | |
|
1.21 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0
Build ID: 20170127144135
Steps to reproduce:
Updated hg repository to latest version, compiled with mach.
This worked on Friday, and started failing over the weekend. I had hoped that today's updates would fix it.
I have attached the custom .mozconfig I use to compile nightly.
Actual results:
The compile failed with the following errors.
15:22.99 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/MediaManager.h:8:0,
15:22.99 from /mnt/to_archive/accum/src/mozilla-central/dom/media/MediaDeviceInfo.cpp:7,
15:22.99 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:137:
15:22.99 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:229:28: error: reference to ‘ipc’ is ambiguous
15:22.99 const ipc::PrincipalInfo& aPrincipalInfo,
15:22.99 ^~~
15:22.99 In file included from /mnt/to_archive/accum/src/mozilla-central/netwerk/base/nsTemporaryFileInputStream.h:12:0,
15:22.99 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/File.h:26,
15:22.99 from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.cpp:8,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:2:
15:23.00 /mnt/to_archive/accum/src/mozilla-central/ipc/glue/nsIIPCSerializableInputStream.h:16:11: note: candidates are: namespace mozilla::ipc { }
15:23.00 namespace ipc {
15:23.00 ^~~
15:23.00 In file included from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.h:11:0,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.cpp:7,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:2:
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nsTArray.h:55:11: note: namespace mozilla::dom::ipc { }
15:23.00 namespace ipc {
15:23.00 ^~~
15:23.00 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/MediaManager.h:8:0,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/dom/media/MediaDeviceInfo.cpp:7,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:137:
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:229:46: error: expected unqualified-id before ‘&’ token
15:23.00 const ipc::PrincipalInfo& aPrincipalInfo,
15:23.00 ^
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:229:46: error: expected ‘)’ before ‘&’ token
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:229:46: error: constructors may not be ref-qualified
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:229:46: error: expected ‘;’ at end of member declaration
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:229:48: error: ‘aPrincipalInfo’ does not name a type
15:23.00 const ipc::PrincipalInfo& aPrincipalInfo,
15:23.00 ^~~~~~~~~~~~~~
15:23.00 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:239:5: error: reference to ‘ipc’ is ambiguous
15:23.00 ipc::PrincipalInfo mPrincipalInfo;
15:23.00 ^~~
15:23.00 In file included from /mnt/to_archive/accum/src/mozilla-central/netwerk/base/nsTemporaryFileInputStream.h:12:0,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/File.h:26,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.cpp:8,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:2:
15:23.00 /mnt/to_archive/accum/src/mozilla-central/ipc/glue/nsIIPCSerializableInputStream.h:16:11: note: candidates are: namespace mozilla::ipc { }
15:23.00 namespace ipc {
15:23.00 ^~~
15:23.00 In file included from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.h:11:0,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.cpp:7,
15:23.00 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:2:
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nsTArray.h:55:11: note: namespace mozilla::dom::ipc { }
15:23.01 namespace ipc {
15:23.01 ^~~
15:23.01 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/MediaManager.h:8:0,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/dom/media/MediaDeviceInfo.cpp:7,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:137:
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:330:35: error: reference to ‘ipc’ is ambiguous
15:23.01 const ipc::PrincipalInfo& aPrincipalInfo,
15:23.01 ^~~
15:23.01 In file included from /mnt/to_archive/accum/src/mozilla-central/netwerk/base/nsTemporaryFileInputStream.h:12:0,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/File.h:26,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.cpp:8,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:2:
15:23.01 /mnt/to_archive/accum/src/mozilla-central/ipc/glue/nsIIPCSerializableInputStream.h:16:11: note: candidates are: namespace mozilla::ipc { }
15:23.01 namespace ipc {
15:23.01 ^~~
15:23.01 In file included from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.h:11:0,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/dom/media/EncodedBufferCache.cpp:7,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:2:
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nsTArray.h:55:11: note: namespace mozilla::dom::ipc { }
5:23.01 namespace ipc {
15:23.01 ^~~
15:23.01 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/MediaManager.h:8:0,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/dom/media/MediaDeviceInfo.cpp:7,
15:23.01 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:137:
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:330:53: error: expected unqualified-id before ‘&’ token
15:23.01 const ipc::PrincipalInfo& aPrincipalInfo,
15:23.01 ^
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:330:53: error: expected ‘)’ before ‘&’ token
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:330:53: error: expected ‘;’ at end of member declaration
15:23.01 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/MediaEngine.h:330:55: error: ‘aPrincipalInfo’ does not name a type
15:23.01 const ipc::PrincipalInfo& aPrincipalInfo,
15:23.01 ^~~~~~~~~~~~~~
15:23.01
15:23.01 In the directory /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media
15:23.01 The following command failed to execute properly:
15:23.01 /usr/bin/ccache /usr/lib64/ccache/g++ -std=gnu++11 -o Unified_cpp_dom_media1.o -c -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/stl_wrappers -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/system_wrappers -include /mnt/to_archive/accum/src/mozilla-central/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DMOZILLA_INTERNAL_API -DWEBRTC_POSIX -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/mnt/to_archive/accum/src/mozilla-central/dom/media -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media -I/mnt/to_archive/accum/src/mozilla-central/caps -I/mnt/to_archive/accum/src/mozilla-central/dom/base -I/mnt/to_archive/accum/src/mozilla-central/layout/generic -I/mnt/to_archive/accum/src/mozilla-central/layout/xul -I/mnt/to_archive/accum/src/mozilla-central/netwerk/base -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders -I/mnt/to_archive/accum/src/mozilla-central/ipc/chromium/src -I/mnt/to_archive/accum/src/mozilla-central/ipc/glue -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nspr -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/mozilla-config.h -MD -MP -MF .deps/Unified_cpp_dom_media1.o.pp -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++14-compat -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -pthread -pipe -g -Wall -fno-schedule-insns2 -fno-lifetime-dse -fno-delete-null-pointer-checks -O3 -fno-omit-frame-pointer -Wno-error=attributes -Wno-error=shadow /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp
15:23.01 /mnt/to_archive/accum/src/mozilla-central/config/rules.mk:1007: recipe for target 'Unified_cpp_dom_media1.o' failed
15:23.01 gmake[5]: *** [Unified_cpp_dom_media1.o] Error 1
15:23.01 gmake[5]: *** Waiting for unfinished jobs....
Expected results:
Pass
Pass
I ran a bisect on this. It took a while, but found that the problem was caused by:
changeset: 331566:e72459157cf9
parent: 331562:7675a6d4b824
user: Andrea Marchesini <amarchesini@mozilla.com>
date: Sat Jan 28 18:29:13 2017 +0100
files: dom/media/MediaManager.cpp dom/media/MediaManager.h dom/media/imagecapture/moz.build dom/media/systemservices/CamerasChild.cpp dom/media/systemservices/CamerasChild.h dom/media/systemservices/CamerasParent.cpp dom/media/syste
description:
Bug 1320170 - dom/media should use nsIPrincipal (and PrincipalInfo) instead origin as string, r=rjesup, r=ehsan
Blocks: 1320170
status-firefox51:
--- → unaffected
status-firefox52:
--- → unaffected
status-firefox53:
--- → unaffected
status-firefox54:
--- → affected
tracking-firefox54:
--- → ?
Flags: needinfo?(amarchesini)
Keywords: regression
| Assignee | ||
Comment 2•9 years ago
|
||
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #8832458 -
Flags: review?(ehsan)
Updated•9 years ago
|
Attachment #8832458 -
Flags: review?(ehsan) → review+
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
backlog: --- → webrtc/webaudio+
Rank: 25
Ever confirmed: true
Priority: -- → P2
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/224d71d1532a
Fix an ambiguous ipc header in MediaEngine.h, r=ehsan
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Updated•9 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•