Bug 1335250 - Fix an ambiguous ipc header in MediaEngine.h, r=ehsan